--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,7 +9,6 @@
     <link rel="shortcut icon" href="avatar.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
 </head>
 
 <body>
@@ -20,13 +18,18 @@
                 <img src="giphy.gif" alt="image">
             </div>
             <h1>J A R V I S</h1>
-            <p>I'm a Virtual Assistant JARVIS, How may i help you?</p>
+            <p>I'm a Virtual Assistant JARVIS, How may I help you?</p>
         </div>
-        <div class="input">
+        <div class="input" onclick="toggleRecognition()">
+            <h1 class="content">Click here to speak</h1>
             <button class="talk"><i class="fas fa-microphone-alt"></i></button>
-            <h1 class="content"> Click here to speak</h1>
+            <span class="status"></span> <!-- Add this span for status messages -->
         </div>
     </section>
+
+    <!-- Floating Button for About the Creator -->
+    <a href="aboutme.html" class="floating-about-button">About the Creator</a>
+
     <script src="app.js"></script>
 </body>
 
